chore(export-pdf): update degradation style and annoted pan